Fix sidebar size on mobile

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -454,7 +454,7 @@ article.profile
     aside
     {
         display: block;
-        position: absolute;
+        position: fixed;
         z-index: 1000;
         top: 0;
         left: 0;
